--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,12 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+        coreLibraryDesugaringEnabled true
     }
 }
 
 dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
